--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <p>With all my love and deepest apologies,</p>
                 </div>
                 <div class="signature">Me</div>
-                <a href="tel:" class="cta-button">Call Me</a>
+                <a href="tel:7260889723" class="cta-button">Call Me</a>
             </div>
             <div class="floating-hearts small"></div>
         </div>
