--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/cursor.css">
 </head>
 <body>
     <!-- Fancy Hearts Container -->
@@ -186,5 +187,6 @@
     <!-- JavaScript Files -->
     <script src="js/animations.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/cursor.js"></script>
 </body>
 </html>
